--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>OneDrive Picker + Graph API</title>
-  <script src="https://alcdn.msauth.net/browser/msal-browser.min.js"></script>
+  <script src="https://alcdn.msauth.net/browser/2.38.1/js/msal-browser.min.js"></script>
   <script src="https://js.live.net/v7.2/OneDrive.js"></script>
 </head>
 <body>
