--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       auth: {
         clientId: "0e84f375-3253-4903-a67b-8c26ec405793", // <<<<<<<< 換成你自己的
         authority: "https://login.microsoftonline.com/be2d5505-f7e6-4600-bbe2-b3201c91b344", // <<<<<<<< 換成你自己的
-        redirectUri: "https://onedrive-picker.vercel.app/"
+        redirectUri: "https://localhost"
       }
     };
 
